# Gestion-Tournament

./: Arbitre.cpp  Arbitre.h  Billet.cpp  Billet.h  CMakeLists.txt  Equipe.cpp  Equipe.h  Match.cpp  Match.h  Spectateur.cpp  Spectateur.h  Terrain.cpp  Terrain.h  Tournoi.cpp  Tournoi.h  Zone.cpp  Zone.h  main.cpp
